# DanmakuFactory

./: AssFile.c  CMakeLists.txt  README.md  main.c  makefile  makefile_64  safer_str_func_fix.c  safer_str_func_fix.h
TemplateFile/: TemplateFile.c  TemplateFile.h
